# lk2nd2nd

./: .gitignore  README.md
app/aboot/: aboot.c  fastboot_test.c  rules.mk
app/fastboot/: fastboot.c  rules.mk
app/fastboot/include/app/: fastboot.h
app/rust_test/: Cargo.toml  rules.mk
app/rust_test/src/: lib.rs  lk_alloc.rs  lk_app.rs  panic.rs
lk2nd/: init.c
lk2nd/boot/: boot.c  boot.h  extlinux.c
lk2nd/device/: device.c
lk2nd/device/2nd/: device.c  parse-cmdline.c  parse-tags.c
lk2nd/device/menu/: menu.c
lk2nd/fastboot/: fetch.c  hash.c  misc.c  screenshot.c
lk2nd/fastboot/debug/: cpuid.c  register.c  regulator.c
lk2nd/hw/bdev/: util.c
lk2nd/ramoops/: ramoops.c
lk2nd/serialno/: mac.c
lk2nd/version/: version.c
make/: build.mk
platform/msm8916/include/platform/: clock.h
platform/msm_shared/: uart_dm.c
platform/msm_shared/include/: ab_partition_parser.h  uart_dm.h
project/: msm8916.mk
rust/: Cargo.toml
rust/src/: bio.rs  extlinux.rs  fat_readcache.rs  fbcon.rs  fmt.rs  kernel_boot.rs  lib.rs  lk_alloc.rs  lk_app.rs  lk_fs.rs  lk_list.rs  lk_mutex.rs  lk_thread.rs  panic.rs
