[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build]
target = "armv7a-none-eabi"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
r-efi = "4.3.0"
fatfs = { default-features = false, features = ["alloc", "lfn"], git = "https://github.com/rafalh/rust-fatfs", rev = "1aa43f7" }
object = { version = "0.34.0", default-features = false, features = ["read_core", "pe"] }
memchr = { version = "2.7.1", default-features = false }
