[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
r-efi = "4.3.0"
fatfs = { default-features = false, features = ["alloc", "lfn"], git = "https://github.com/rafalh/rust-fatfs", rev = "1aa43f7" }
#object = { version = "0.34.0", default-features = false, features = ["read_core", "pe"] }
object = { version = "0.34.0", default-features = false, features = ["read_core", "pe", "no_std"], git = "https://github.com/philipc/object", branch = "issue-652" }
embedded-graphics = { version = "0.8.1", default-features = false }
embedded-vintage-fonts = "0.2.0"
tinybmp = { version = "0.5.0", git = "https://github.com/samcday/tinybmp", branch = "alpha-hack" }
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_65"] }
byteorder = { version = "1.5.0", default-features = false }
