[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# using git commit because fatfs hasn't had a proper release in a long while for some reason. latest commits drop usage
# of "core-io" crate, which is defunct (and required nightly)
fatfs = { default-features = false, features = ["alloc", "lfn"], git = "https://github.com/rafalh/rust-fatfs", rev = "1aa43f7" }
# using git commit for no-std ReadRef support, should be in 0.35 when it's released
object = { version = "0.34.0", default-features = false, features = ["read_core", "pe"], git = "https://github.com/gimli-rs/object", rev = "ff176cc59e004fb7aab037a327da2c21909bee81" }
embedded-graphics = { version = "0.8.1", default-features = false }
embedded-vintage-fonts = "0.2.0"
# using fork for alpha support: https://github.com/embedded-graphics/tinybmp/pull/43
tinybmp = { version = "0.5.0", git = "https://github.com/samcday/tinybmp", branch = "alpha-hack" }
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_65"] }
byteorder = { version = "1.5.0", default-features = false }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0.81", default-features = false }
embedded-layout = { version = "0.4.1", default-features = false }
profont = "0.7.0"
